; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_refs.c_git_reference__is_valid_name.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_refs.c_git_reference__is_valid_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_reference__is_valid_name(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i8*, i8** %4, align 8
  %7 = load i32, i32* %5, align 4
  %8 = call i64 @git_reference__normalize_name(i32* null, i8* %6, i32 %7)
  %9 = icmp slt i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = call i32 (...) @git_error_clear()
  store i32 0, i32* %3, align 4
  br label %13

12:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %13

13:                                               ; preds = %12, %10
  %14 = load i32, i32* %3, align 4
  ret i32 %14
}

declare dso_local i64 @git_reference__normalize_name(i32*, i8*, i32) #1

declare dso_local i32 @git_error_clear(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
